{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 257,
  "lineage": "cb971d1e-93be-c40b-9a61-e748bff51ad2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Eip_for_deepia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0950bcc24efa9989f",
            "association_id": "eipassoc-0b3b28b035adbab04",
            "domain": "vpc",
            "id": "eipalloc-0950bcc24efa9989f",
            "instance": "i-0bd1f66cb637daa39",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0e7391cd2a9d7b2f2",
            "private_dns": "ip-10-0-1-203.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.203",
            "public_dns": "ec2-3-112-118-100.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.112.118.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ElasticIP_for_deepia"
            },
            "tags_all": {
              "Name": "ElasticIP_for_deepia"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.Instance_for_deepia",
            "aws_key_pair.deepia_ec2",
            "aws_security_group.SecurityGroup_for_deepia",
            "aws_subnet.Subnet_for_deepia",
            "aws_vpc.VPC_for_deepia",
            "data.aws_ami.AMI_for_deepia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Instance_for_deepia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d8ed8255877048d",
            "arn": "arn:aws:ec2:ap-northeast-1:290164200559:instance/i-0bd1f66cb637daa39",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd1f66cb637daa39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deepia_ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e7391cd2a9d7b2f2",
            "private_dns": "ip-10-0-1-203.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.203",
            "public_dns": "ec2-54-238-91-147.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.238.91.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090cea9de41a0c1fd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f86e8653055301dc",
            "tags": {
              "Name": "deepia-instance"
            },
            "tags_all": {
              "Name": "deepia-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077e8dbbeb59c181b"
            ]
          },
          "dependencies": [
            "aws_key_pair.deepia_ec2",
            "aws_security_group.SecurityGroup_for_deepia",
            "aws_subnet.Subnet_for_deepia",
            "aws_vpc.VPC_for_deepia",
            "data.aws_ami.AMI_for_deepia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Gateway_for_deepia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:290164200559:internet-gateway/igw-0008851019f316366",
            "id": "igw-0008851019f316366",
            "owner_id": "290164200559",
            "tags": {
              "Name": "Gateway_for_deepia"
            },
            "tags_all": {
              "Name": "Gateway_for_deepia"
            },
            "vpc_id": "vpc-0261ec5a80926c452"
          },
          "dependencies": [
            "aws_vpc.VPC_for_deepia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Table_for_deepia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:290164200559:route-table/rtb-09469252e5e003d1e",
            "id": "rtb-09469252e5e003d1e",
            "owner_id": "290164200559",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0008851019f316366",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Table_for_deepia"
            },
            "tags_all": {
              "Name": "Table_for_deepia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0261ec5a80926c452"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Gateway_for_deepia",
            "aws_vpc.VPC_for_deepia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Association_for_deepia_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1a6589be41dcf93",
            "route_table_id": "rtb-09469252e5e003d1e",
            "subnet_id": "subnet-0f86e8653055301dc"
          },
          "dependencies": [
            "aws_internet_gateway.Gateway_for_deepia",
            "aws_route_table.Table_for_deepia",
            "aws_subnet.Subnet_for_deepia",
            "aws_vpc.VPC_for_deepia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SecurityGroup_for_deepia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:290164200559:security-group/sg-077e8dbbeb59c181b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077e8dbbeb59c181b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SecurityGroup_for_deepia",
            "name_prefix": "",
            "owner_id": "290164200559",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SecurityGroup_for_deepia"
            },
            "tags_all": {
              "Name": "SecurityGroup_for_deepia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0261ec5a80926c452"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_for_deepia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_for_deepia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:290164200559:subnet/subnet-0f86e8653055301dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f86e8653055301dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "290164200559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_for_deepia"
            },
            "tags_all": {
              "Name": "Subnet_for_deepia"
            },
            "vpc_id": "vpc-0261ec5a80926c452"
          },
          "dependencies": [
            "aws_vpc.VPC_for_deepia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_for_deepia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:290164200559:vpc/vpc-0261ec5a80926c452",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01343f69bfa69090b",
            "default_route_table_id": "rtb-09065687e86d8ec21",
            "default_security_group_id": "sg-0906b9b3ef0d74ecc",
            "dhcp_options_id": "dopt-a97776ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0261ec5a80926c452",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09065687e86d8ec21",
            "owner_id": "290164200559",
            "tags": {
              "Name": "VPC_for_deepia"
            },
            "tags_all": {
              "Name": "VPC_for_deepia"
            }
          }
        }
      ]
    }
  ]
}